--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Coming Soon</title>
+<title>AgileSoul.one</title>
 <script type="text/javascript" src="tools/jquery.min.js"></script> 
 
 <link href="tools/style.css" rel="stylesheet" type="text/css" media="screen" />
@@ -10,8 +10,8 @@
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'> 
 <meta name="viewport" content="width=device-width, initial-scale = 1.0, user-scalable = no">
 
-
 </head>
+
 <body>
 <div class="wrapper">
 
@@ -19,18 +19,18 @@
 
 			<div class="xouter">
 				<div class="xinner">
-					<h1 id="logo">we.the.fashion</span></h1>
+					<h1 id="logo">AgileSoul.one</span></h1>
 				</div>
 			</div>
 			
 			<div class="content-wrap">
 				<div class="comingsoon">
 					<h2>Coming Soon</h2>
-					<p>to redefine the ‘fashion’</p>
+					<p>to play the game of agile</p>
 				</div>
 	
 				<div class="content">
-					<p>Etiam ut eros est, quis ornare dui. <br/>Pellentesque habitant.</p>
+					<p>Jeu de carte pour découvrir l'agilité. <br/>Par l'expérimentation, bien sûr !</p>
 				</div>
 			</div>
 				
@@ -38,15 +38,15 @@
 		
 				
 		<div class="social">
-			<a href="#" class="fa-stack fa-lg">
+			<a href="http://inagua.ch" target="_blank" class="fa-stack fa-lg" title="Powered by inagua.ch">
 				 <i class="fa fa-circle fa-stack-2x"></i>
-				 <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
+				 <i class="fa fa-gift fa-stack-1x fa-inverse"></i>
 			</a>
-			<a href="#" class="fa-stack fa-lg">
+			<a href="http://twitter.com/jacquescouvreur" target="_blank" class="fa-stack fa-lg" title="Created by jacques couvreur">
 				 <i class="fa fa-circle fa-stack-2x"></i>
 				 <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
 			</a>
-			<a href="#" class="fa-stack fa-lg">
+			<a href="https://ch.linkedin.com/in/jacquescouvreur" target="_blank" class="fa-stack fa-lg" title="Created by jacques couvreur">
 				 <i class="fa fa-circle fa-stack-2x"></i>
 				 <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
 			</a>
@@ -54,7 +54,5 @@
 </div>
 
 </body>
-	
-	
 
 </html>
