Add 'Baveuse' custom online font.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <title>AgileSoul.one</title>
 <script type="text/javascript" src="tools/jquery.min.js"></script> 
 
+<link href="//db.onlinewebfonts.com/c/4369df033de321915dcf13be71f55ee6?family=Baveuse" rel="stylesheet" type="text/css"/>
 <link href="tools/style.css" rel="stylesheet" type="text/css" media="screen" />
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'> 
@@ -19,7 +20,7 @@
 
 			<div class="xouter">
 				<div class="xinner">
-					<h1 id="logo">AgileSoul.one</span></h1>
+					<h1 id="logo"><span class="grey">Agile</span>Soul<span class="grey">.one</span></h1>
 				</div>
 			</div>
 			
